--- a/src/NetCoreRetarder/NetCoreRetarder/NetCoreRetarder.csproj
+++ b/src/NetCoreRetarder/NetCoreRetarder/NetCoreRetarder.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NetCoreRetarderCore\NetCoreRetarderCore.csproj" />
+  </ItemGroup>
+
 
 </Project>
